<resources>
    <string name="app_name">AnneFlix</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_aboutus">AboutUs</string>
    <string name="home_second">Movies</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="synopsis">Synopsis</string>



</resources>