<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_first">
    <fragment
        android:id="@+id/navigation_first"
        android:name="com.gmail.eamosse.imdb.ui.home.FirstFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
        <argument
            android:name="categoryId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_second"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_MovieDetailFragment"
            app:destination="@id/navigation_movie_detail" />

        <argument
            android:name="categoryId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_movie_detail"
        android:name="com.gmail.eamosse.imdb.ui.home.MovieDetailFragment"
        android:label="@string/movie_detail"
        tools:layout="@layout/fragment_movie_detail">

        <action
            android:id="@+id/action_HomeSecondFragment_to_MovieDetailFragment"
            app:destination="@id/navigation_movie_detail" />

        <argument
            android:name="movieId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gmail.eamosse.imdb.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_aboutus"
        android:name="com.gmail.eamosse.imdb.ui.aboutUs.AboutUsFragment"
        android:label="@string/title_aboutus"
        tools:layout="@layout/fragment_aboutus" />
</navigation>